# url-mapper-rust

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  readme.md
config/: default.json
k8s/: postgres.yml  url-mapper-rs.yml
migrations/: 20211220185952_create_url_maps.sql
src/: config.rs  db.rs  main.rs
src/db/: db.rs  manager.rs  mod.rs
src/server/: mod.rs  server.rs
src/server/routes/: mod.rs
src/server/routes/api/: mod.rs
src/server/routes/api/url_maps/: handlers.rs  mod.rs
