[package]
name = "url-mapper-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.11.0", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
anyhow = "1.0.51"
lazy_static = "1.4.0"